trying to fix the pdf page cut off problem

--- a/app/assets/stylesheets/nunchaku/application.css.scss
+++ b/app/assets/stylesheets/nunchaku/application.css.scss
@@ -19,3 +19,8 @@
 .collection_check_boxes {
   padding: 0 1.5em 0.5em 0.5em;
 }
+
+table, tr, td, th, tbody, thead, tfoot {
+  page-break-after: always;
+  page-break-inside: avoid;
+}
